--- a/ui/projects/item/styles.module.scss
+++ b/ui/projects/item/styles.module.scss
@@ -6,11 +6,13 @@
     justify-content: center;
     align-items: center;
     position: relative;
+    z-index: 10000000;
 
     &__container {
         display: flex;
         flex-direction: column;
         gap: 16px;
+        z-index: 10000000;
 
         .border {
             border: 1px rgba(255, 255, 255, 0.15);
