--- a/ui/tech-stack/item/styles.module.scss
+++ b/ui/tech-stack/item/styles.module.scss
@@ -2,6 +2,8 @@
 
 .techStackItem {
     position: relative;
+    z-index: 100;
+    cursor: pointer;
 
     &__container {
         display: flex;
@@ -11,7 +13,6 @@
         // border-top: 1px solid $color-border-tech-stack;
         // border-bottom: 1px solid $color-border-tech-stack;
         padding: 1.875vw 2.5vw; //30px 40px; 1600
-        cursor: pointer;
 
         @media (max-width: 768px) {
             padding: 3.831vw 4.831vw;
