--- a/ui/tech-stack/line/styles.module.scss
+++ b/ui/tech-stack/line/styles.module.scss
@@ -11,6 +11,7 @@
     height: 1px;
     position: relative;
     width: 100%;
+    z-index: 100;
     // margin-bottom: 20px;
 
     svg {
@@ -21,7 +22,7 @@
 
         path {
             stroke-width: 1px;
-            stroke: $color-border-tech-stack;;
+            stroke: $color-border-tech-stack;
             fill: none;
 
             &:hover {
